argocd/env-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-app
  template:
    metadata:
      labels:
        app: env-app
    spec:
      containers:
        - name: env-app
          image: monopot/homelab-env-test:0.2
          ports:
            - containerPort: 80
