argocd/env-app/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: env-app
spec:
  selector:
    app: env-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
