argocd/env-app/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: env-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    external-dns.alpha.kubernetes.io/target: unknown.monopot.xyz
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
    - host: unknown  # gets patched
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: env-app
                port:
                  number: 80
